# optimus

./: .bumpversion.cfg  .coveragerc  .gitignore  .pypirc  .pyup.yml  .readthedocs.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.coiled  Dockerfile.coiledgpu  Dockerfile.gpu-coiled  MANIFEST.in  Optimus_Example.ipynb  README.md  README_.md  README_for_devs.md  README_server.md  Readme.txt  data.json  end_to_end.ipynb  infer.py  inlinecss.js  install-spark-1-6.sh  install-spark-2-2.sh  install-spark-2-3-1.sh  install-spark-3-1.sh  install-spark.sh  math-test.py  new-api-analyser.ipynb  new-api-column-agg.ipynb  new-api-column-agg.py  new-api-column-descriptive-quantile-analytics.ipynb  new-api-column-functions.ipynb  new-api-column-functions.py  new-api-column.ipynb  new-api-column.py  new-api-load-save.ipynb  new-api-load-save.py  (+32 more)
binder/: apt.txt  environment.yml  requirements.txt
data_type_inference/: charcnn.py  nlp-character_embedding.ipynb
docs/: Makefile  conf.py  environment.yml  index.rst
examples/: 10_min_from_pandas_to_spark_with_optimus.ipynb  10_min_from_pandas_to_spark_with_optimus.py  10_min_from_spark_to_pandas_with_optimus.ipynb  10_min_from_spark_to_pandas_with_optimus.py  10_min_to_optimus.ipynb  10_min_to_optimus_colab.ipynb  Enricher.ipynb  Impute_Missing_Data_With_Optimus.ipynb  Impute_missing_data_with_Optimus.ipynb  OptimusTest.ipynb  Optimus_Example.ipynb  Optimus_Outliers_Example.ipynb  Untitled.ipynb  altair.ipynb  bumblebee.ipynb  cars-clickable-legend.html  coiled.ipynb  column.html  column.ipynb  column.py  (+74 more)
(+686 files in other folders)
